@@ -1,4 +1,7 @@
 AUX rtmidi-2.0.1_buildsystem.patch 4586 SHA256 af07a24f641379ee1d07173a27f6d33bb0c6139f8b52b000fb1a5e82c893d62f SHA512 d2737aa3a11f78a80842848b1519fed37d68aef990848d1e70bf57049079fb8e1c6356e97d94fb76de949f3dcb3868dc51a80704361a54a0c94c5311162b33d3 WHIRLPOOL 77f232e6ca78ba87a18b3db073f5be680143433c5be4bcda1cae4568b4bfb02c56f182855dc71b2c29130daaa0b87722120bd05491284bfb860f16a859dd6fc7
 DIST rtmidi-2.0.1.tar.gz 239394 SHA256 b5017a91df0c2bc4c0d5c6548ac5f9696c5bc0c202f6bec704563c6f6bec64ec SHA512 220c4f2085921fdc591b2f45e06cbb9b285e788b0784fdb05a571f19236ab26135d436cf484398d483ba2846a9551a4aa57fbb45008fe9b6511748525ffea9c5 WHIRLPOOL d13dcc2fc514acdfd0807f41a35d12622d894cfeeca372355cbe6f385beb036e1fbae56fb9eeb813867a1e040a008a29794286be1fb03be26a5a8641237f0fc1
+DIST rtmidi-2.1.0.tar.gz 242064 SHA256 a0a59226614b878e7c32890cb7c38a6fe48a97082baf4913297d4c3958a9b3ac SHA512 3bb58a7bcdbd0a6c716060d57eb856f4557a460fd24a533e956ee93523aafe058a4b3cf3133fe1f21d517b1bc7519822f3466a88e3b2c3042a8b09d171143877 WHIRLPOOL 65c5e200be6bfb0592694742a3a7d42ac580e976b2732bfe7abaf9654264f9bb9d9a80658e0f124aeccdc2added3ef0c27fff85ecab2338d15f5444a0db8d668
 EBUILD rtmidi-2.0.1.ebuild 1189 SHA256 d3b823d8041e06dd81218052f9598f006b3630c8b73542d38872ab4741de7f14 SHA512 f3108f55836ff3061155b78b20917d5c3c0c728d0bf62dae6c3a23bb67c44e1e3346ee5841ca7f74b0096a57858fdd84b04ff7e6d91c54d277a048374aaeddc5 WHIRLPOOL 0d36a9e47ffef69ef6572bfc3207819afc485271bd30ae14e6a4b1d193ec57f2157c02457bd29c00a9d0e1595281f39b7b0b7127cab19d2d120142ca1b74e173
-MISC ChangeLog 282 SHA256 3bcff7e20d1bae82f19393cc1639a71d9a3e2c72ceeb570f208a587ba9dd1c31 SHA512 fdcf44dbc0c47e68d12ed687a33b08b3ca781013fe2b038bb0f3c1119f11fb4cbc11804ef85e88894f3834998423232a67a64d0537cee38c405aee9407ce0aa2 WHIRLPOOL 798a1ec4879a10aaeec2fb7d9e666b63cf8781baa500a21352447c4ab83fcd244711e5682757f400f58d0c1542b315c8c9313adbf15fe5eb0e54b98473f1b1bf
+EBUILD rtmidi-2.1.0.ebuild 1206 SHA256 2a587e2fd8a717d3aaec0ffc4049bd835a21c1de5fa4dab513eb035e2d147807 SHA512 57c64fe190a91bdbf52b651bec20094e6ea96f6d99fc4ea9ebfe80e427c985c3a3a4765c5e1b46d8a09513c3699acd0b64d973d4a0200db4236cc173a1623676 WHIRLPOOL d35361600a5d2cc53db726d7aa9425c7ba064061659c2b0996a5ae7a00ec52e7051cfa79ea160e87e6dcb8cc81c4dcbcadff699d5a3c5b0b496d4e7016ce8cf3
+MISC ChangeLog 476 SHA256 c3d57cf255a997120d8b9b800339499f8f2dd7e25ccb840a338f35f7b2902dd8 SHA512 2e50be673d2586d042c43abda3226cb6810941ca0ecc51bddbe7b1da4833279e734a7e12ff22a7ce463094638512f92043083969140da7cd1d872666999d5418 WHIRLPOOL 108a881c5183ac4f3cbb009ed9a71609842bfe20c685d46b793c0d0891f06a037c1e3a99e6e96bb430da6f6bd9a636d56dce25ca1b17d9916428cbb9707f5c92
+MISC metadata.xml 246 SHA256 f32f31abe9dcc1f9a5dc9b6a36996d773abd006d92c13c4df48f8d7d1061060f SHA512 327022589c637a14219eb603a62050fbb93b980f4693960c0ac4117b6b483d9f0d9fe1366d8e18227b34373a399aef339f49c16df8ca57b9ec870568a4d394f4 WHIRLPOOL e55381a9a9fd1d0efbe87da1c3aa302efdcf4734827f56273faeb55b17361c529518fcf16ac0946102e26165e8eedba81ab0cd07c7b08ce6bad001e944e43a0f
